--- a/WebRoot/WEB-INF/views/register.html
+++ b/WebRoot/WEB-INF/views/register.html
@@ -39,13 +39,13 @@
                   <form class="form-horizontal">
                     <!-- Registration form starts -->
                          <div class="form-group">
-                           <label class="control-label col-lg-3" for="appcode">业务系统编号（英文拼写）</label>
+                           <label class="control-label col-lg-3" for="appcode">系统编号</label>
                            <div class="col-lg-9">
                              <input type="text" class="form-control" datatype="*"  nullmsg="此项必填！" id="appcode">
                            </div>
                          </div>
                           <div class="form-group">
-                           <label class="control-label col-lg-3" for="appname">业务系统名称（中文名称）</label>
+                           <label class="control-label col-lg-3" for="appname">系统名称</label>
                            <div class="col-lg-9">
                              <input type="text" class="form-control" datatype="*"  nullmsg="此项必填！" id="appname">
                            </div>
@@ -110,7 +110,7 @@ function register(){
 						});
 						$t.focus();
 				 }else{ 
-				 	 alert(data.success);
+				 	 alert("注册成功！您的id为"+data.appid+",秘钥为:"+data.appsecret+" 请妥善保管！");
 					 window.location.href = "${ctxPath!}/index";
 				 }
 			}
@@ -120,10 +120,10 @@ function register(){
 
 //客户端校验
 function check() {
-	if ($("#name").val() == "") {
-		$("#name").tips({
+	if ($("#appcode").val() == "") {
+		$("#appcode").tips({
 			side : 2,
-			msg : '姓名不得为空',
+			msg : '编号不得为空',
 			bg : '#4F4F4F',
 			time : 3
 		});
