--- a/WebRoot/WEB-INF/views/datacenter/accountWallet/account-wallet-manager.html
+++ b/WebRoot/WEB-INF/views/datacenter/accountWallet/account-wallet-manager.html
@@ -28,7 +28,7 @@
 									<div class="form-group">
 										<label class="control-label col-lg-3">用户编码</label>
 										<div class="col-lg-9">
-											<input type="text" name="userId" /> <input type="text"
+											<input type="text" name="user_id" /> <input type="text"
 												onclick="getTotalList('search-form','search-btn')"
 												class="btn btn-success" value="全部" readonly /> <input
 												type="text" id="search-btn" class="btn btn-success"
