--- a/WebRoot/WEB-INF/views/layout/header.html
+++ b/WebRoot/WEB-INF/views/layout/header.html
@@ -27,6 +27,10 @@
   <link rel="stylesheet" href="${ctxPath}/static/style/bootstrap-switch.css">
   <!-- Main stylesheet -->
   <link href="${ctxPath}/static/style/style.css" rel="stylesheet">
+  <!-- button.css -->
+  <link href="${ctxPath}/static/style/button.css" rel="stylesheet">
+  <!-- confirm.css -->
+  <link href="${ctxPath}/static/style/jquery-confirm.min.css" rel="stylesheet">
   <!-- Widgets stylesheet -->
   <link href="${ctxPath}/static/style/widgets.css" rel="stylesheet">   
   <!-- uploadifive -->
@@ -81,6 +85,9 @@
 <script src="${ctxPath}/static/js/jquery.flot.resize.js"></script>
 <script src="${ctxPath}/static/js/jquery.flot.pie.js"></script>
 <script src="${ctxPath}/static/js/jquery.flot.stack.js"></script>
+
+<!-- confirm -->
+<script src="${ctxPath}/static/js/jquery-confirm.min.js"></script>
 
 <!-- jQuery Notification - Noty -->
 <script src="${ctxPath}/static/js/jquery.noty.js"></script> <!-- jQuery Notify -->
