--- a/WebRoot/WEB-INF/views/datacenter/accountWallet/account-wallet-detail.html
+++ b/WebRoot/WEB-INF/views/datacenter/accountWallet/account-wallet-detail.html
@@ -18,7 +18,7 @@
 		           </div>
 		         </div>
 				<div>
-			</form>
+				<div style="padding: 8px"><h3>查询密码设置</h3></div>
 				<div class="form-group">
 					<label class="col-lg-4 control-label">旧密码</label>
 					<div class="col-lg-8">
@@ -32,9 +32,43 @@
 					</div>
 				</div>
 				<div>
-				<input type="button" onclick="updateSelPwd()" value="修改查询密码" class="button button-glow button-rounded button-highlight">
-				<input type="button" onclick="updateSelPwd()" value="重置查询密码" class="button button-glow button-rounded button-caution">
+				<input type="button" onclick="updateSelPwd()" value="修改查询密码" class="button button-glow button-rounded button-raised button-primary button-small">
+				<input type="button" onclick="resetSelPwd()" value="重置查询密码" class="button button-glow button-rounded button-caution button-small">
 				</div>
+				<div style="padding: 8px"><h3>支付密码设置</h3></div>
+				<div class="form-group">
+					<label class="col-lg-4 control-label">查询密码</label>
+					<div class="col-lg-8">
+						<input type="text" id="queryPassword" class="form-control">
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="col-lg-4 control-label">支付密码</label>
+					<div class="col-lg-8">
+						<input type="text" id="newPayPassword" class="form-control">
+					</div>
+				</div>
+				<div>
+				<input type="button" onclick="updateSelPwd()" value="设置支付密码" class="button button-royal button-rounded button-small">
+				</div>
+				<div style="padding: 8px"><h3>支付密码修改</h3></div>
+				<div class="form-group">
+					<label class="col-lg-4 control-label">旧支付密码</label>
+					<div class="col-lg-8">
+						<input type="text" id="queryPassword" class="form-control">
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="col-lg-4 control-label">新支付密码</label>
+					<div class="col-lg-8">
+						<input type="text" id="newPayPassword" class="form-control">
+					</div>
+				</div>
+				<div>
+				<input type="button" onclick="updateSelPwd()" value="修改支付密码" class="button button-glow button-rounded button-raised button-primary button-small">
+				<input type="button" onclick="resetSelPwd()" value="重置支付密码" class="button button-glow button-rounded button-caution button-small">
+				</div>
+		   </form>
 			</div>
 		</div>
 	</div>
@@ -48,19 +82,63 @@
 				确认 : function() {
 					var oldPassword = $('#oldPassword').val();
 					var newPassword = $('#newPassword').val();
+					var walletAddr = $('#wallet_addr').val();
 					var userId = $('#user_id').val();
 					$.ajax({
 						//async:false,
 						type : "POST",
-						url : '${ctxPath}/accountChainWallet/updateSelPwd',
+						url : '${ctxPath}/accountWallet/updateSelPwd',
 						data : {
 							oldPassword : oldPassword,
 							newPassword : newPassword,
-							userId : userId
+							userId : userId,
+							walletAddr : walletAddr
 						},
 						dataType : 'json',
 						success : function(data) {
-							alert(data.msg)
+							$.alert({
+								title : '提示',
+								content : data.msg
+							});	 
+						}
+					});
+				},
+				取消 : function() {
+
+				}
+			}
+		});
+	}
+	
+	function resetSelPwd(){
+		$.confirm({
+			title : '提示!',
+			content : '确认重置密码吗？',
+			buttons : {
+				确认 : function() {
+					var walletAddr = $('#wallet_addr').val();
+					var userId = $('#user_id').val();
+					$.ajax({
+						//async:false,
+						type : "POST",
+						url : '${ctxPath}/accountWallet/resetSelPwd',
+						data : {
+							userId : userId,
+							walletAddr : walletAddr
+						},
+						dataType : 'json',
+						success : function(data) {
+							if(undefined!= data.error){
+								$.alert({
+									title : '提示',
+									content : data.error
+								});	 
+							}else{
+								$.alert({
+									title : '提示',
+									content : data.success +'新密码为:'+data.data
+								});	
+							}
 						}
 					});
 				},
