--- a/WebRoot/WEB-INF/views/datacenter/accountChainWallet/account-chain-wallet-list.html
+++ b/WebRoot/WEB-INF/views/datacenter/accountChainWallet/account-chain-wallet-list.html
@@ -25,15 +25,10 @@
 				<td>${item.chainCode!}</td>
 				<td>${item.userId!}</td>
 				<td>
-				<button class="btn btn-xs btn-warning" data-mode="page" data-title="修改查询密码"
-							data-url="${ctxPath}/accountWallet/updateSelectPwdPage"
-							data-data="{id:'${item.id}'}" data-height="85%" data-width="60%">
-				<i class="fa fa-pencil"></i>
-				</button>
-				<button class="btn btn-xs btn-danger" data-mode="page" data-title="重置查询密码"
-							data-url="${ctxPath}/accountWallet/resetSelectPwdPage"
-							data-data="{id:'${item.id}'}" data-height="85%" data-width="60%">
-				<i class="fa fa-pencil"></i>
+				<button class="btn btn-xs btn-success" data-mode="page" data-title="查询余额"
+							data-url="${ctxPath}/accountChainWallet/balances"
+							data-data="{id:'${item.id}'}" data-height="65%" data-width="60%">
+				<i class="fa fa-gear"></i>
 				</button>
 				</td>
 			</tr>
