--- a/WebRoot/WEB-INF/views/datacenter/accountWallet/account-wallet-balances.html
+++ b/WebRoot/WEB-INF/views/datacenter/accountWallet/account-wallet-balances.html
@@ -1,62 +1,67 @@
 
 <div class="widget wgreen">
 	<div class="widget-content">
-			<div class="padd">
-			
-			 <form class="form-horizontal" role="form">
-				 <div class="form-group">
-		           <label class="col-lg-4 control-label">钱包地址:</label>
-		           <div class="col-lg-8">
-		             <input type="text" class="form-control" id="wallet_addr" value="${item.walletAddr}" readonly="readonly">
-		           </div>
-		         </div>
-	         
-		         <div class="form-group">
-		           <label class="col-lg-4 control-label">用户id:</label>
-		           <div class="col-lg-8">
-		             <input type="text" class="form-control" id="user_id" value="${item.userId}" readonly="readonly">
-		           </div>
-		         </div>
-				<div>
-				<div style="padding: 8px"><h3>查询余额</h3></div>
-				<div class="form-group">
-					<label class="col-lg-4 control-label">查询密码</label>
-					<div class="col-lg-8">
-						<input type="text" id="password" class="form-control">
-					</div>
+		<div class="padd">
+		<form class="form-horizontal" role="form">
+			<div class="form-group">
+				<label class="col-lg-4 control-label">钱包地址:</label>
+				<div class="col-lg-8">
+					<input type="text" class="form-control" id="wallet_addr"
+						value="${item.walletAddr}" readonly="readonly">
 				</div>
-				<div>
-				<input type="button" onclick="getBalances()" value="查询余额" class="button button-glow button-rounded button-raised button-primary button-small">
-		  		<div id="result">
-		  			
-		  		</div>
-		   </form>
 			</div>
+			<div class="form-group">
+				<label class="col-lg-4 control-label">用户id:</label>
+				<div class="col-lg-8">
+					<input type="text" class="form-control" id="user_id"
+						value="${item.userId}" readonly="readonly">
+				</div>
+			</div>
+			<div style="padding: 8px">
+				<h3>查询余额</h3>
+			</div>
+			<div class="form-group">
+				<label class="col-lg-4 control-label">查询密码</label>
+				<div class="col-lg-8">
+					<input type="text" id="password" class="form-control">
+				</div>
+			</div>
+			<div><input type="button" onclick="getBalances()" value="查询余额" class="button button-glow button-rounded button-raised button-primary button-small"></div>
+			<div id="result" style="padding-top: 20px"></div>
+		</form>
 		</div>
 	</div>
 </div>
 <script>
-	function getBalances(){//修改查询密码
-		var password = $('#password').val();
-		var walletAddr = $('#wallet_addr').val();
-		var userId = $('#user_id').val();
-		$.ajax({
-			//async:false,
-			type : "POST",
-			url : '${ctxPath}/accountWallet/getBalances',
-			data : {
-				password : password,
-				userId : userId,
-				walletAddr : walletAddr
-			},
-			dataType : 'json',
-			success : function(data) {
+function getBalances(){//修改查询密码
+	var password = $('#password').val();
+	var walletAddr = $('#wallet_addr').val();
+	var userId = $('#user_id').val();
+	$.ajax({
+		type : "POST",
+		url : '${ctxPath}/accountWallet/getBalances',
+		data : {
+			password : password,
+			userId : userId,
+			walletAddr : walletAddr
+		},
+		dataType : 'json',
+		success : function(data) {
+			if(undefined!= data.error){
 				$.alert({
 					title : '提示',
-					content : data.msg
+					content : data.error
 				});	 
+			}else{
+				var balances = data.list;
+				$("#result").html('');
+				$.each(balances,function(index,item){
+					$("#result").append("<h4>余额：" + item.balance + "，货币名称： "+item.currency+"，冻结金额： "+item.freezed+"</h4>");
+					$("#result").append("</br>");
+				});
 			}
-		});
-	}
+		}
+	});
+}
 </script>
 
