--- a/WebRoot/WEB-INF/views/datacenter/accountWallet/account-wallet-balances.html
+++ b/WebRoot/WEB-INF/views/datacenter/accountWallet/account-wallet-balances.html
@@ -23,7 +23,7 @@
 			<div class="form-group">
 				<label class="col-lg-4 control-label">查询密码</label>
 				<div class="col-lg-8">
-					<input type="text" id="password" class="form-control">
+					<input type="password" id="password" class="form-control">
 				</div>
 			</div>
 			<div><input type="button" onclick="getBalances()" value="查询余额" class="button button-glow button-rounded button-raised button-primary button-small"></div>
