--- a/WebRoot/WEB-INF/views/datacenter/accountWallet/account-wallet-detail.html
+++ b/WebRoot/WEB-INF/views/datacenter/accountWallet/account-wallet-detail.html
@@ -22,13 +22,13 @@
 				<div class="form-group">
 					<label class="col-lg-4 control-label">旧密码</label>
 					<div class="col-lg-8">
-						<input type="text" id="oldPassword" class="form-control">
+						<input type="password" id="oldPassword" class="form-control">
 					</div>
 				</div>
 				<div class="form-group">
 					<label class="col-lg-4 control-label">新密码</label>
 					<div class="col-lg-8">
-						<input type="text" id="newPassword" class="form-control">
+						<input type="password" id="newPassword" class="form-control">
 					</div>
 				</div>
 				<div>
@@ -39,13 +39,13 @@
 				<div class="form-group">
 					<label class="col-lg-4 control-label">查询密码</label>
 					<div class="col-lg-8">
-						<input type="text" id="queryPassword" class="form-control">
+						<input type="password" id="queryPassword" class="form-control">
 					</div>
 				</div>
 				<div class="form-group">
 					<label class="col-lg-4 control-label">支付密码</label>
 					<div class="col-lg-8">
-						<input type="text" id="setPayPassword" class="form-control">
+						<input type="password" id="setPayPassword" class="form-control">
 					</div>
 				</div>
 				<div>
@@ -55,13 +55,13 @@
 				<div class="form-group">
 					<label class="col-lg-4 control-label">旧支付密码</label>
 					<div class="col-lg-8">
-						<input type="text" id="oldPayPassword" class="form-control">
+						<input type="password" id="oldPayPassword" class="form-control">
 					</div>
 				</div>
 				<div class="form-group">
 					<label class="col-lg-4 control-label">新支付密码</label>
 					<div class="col-lg-8">
-						<input type="text" id="newPayPassword" class="form-control">
+						<input type="password" id="newPayPassword" class="form-control">
 					</div>
 				</div>
 				<div>
